update: corrected i3gaps package spelling

--- a/tasks/dnf-packages-installation.yml
+++ b/tasks/dnf-packages-installation.yml
@@ -7,7 +7,7 @@
     - xorg-x11-server-Xorg
     - xorg-x11-xinit
     - xrandr
-    - i3gaps
+    - i3-gaps
   # utilties
     - redshift
     - rofi
